hide visible screen reader text, fixes #9

--- a/assets/css/style-overrides.css
+++ b/assets/css/style-overrides.css
@@ -701,3 +701,8 @@ li.sidebar_header {
 .post h3 { 
 	margin-top: 30px; 
 } 
+
+/* we shouldn't see screen reader text, anyway */ 
+.screen-reader-text { 
+	display: none; 
+} 
